Added index page

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BIQ-Cat OS</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <script src="/js/index.js"></script>
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/index.css" />
+  </head>
+  <body>
+    <!-- <script src="/js/index.js"></script> -->
+    <div class="banner">
+      <h1>BIQ-Cat OS - the OS of the future</h1>
+      <button class="download">Download now</button>
+    </div>
+    <section class="features">
+      <article>
+        <img src="" alt="AI" />
+        <div>
+          <h2>AI</h2>
+          <p>
+            BIQ-Cat OS uses AI to predict your choices, as powerful helper, etc.
+            If you don't want some features, you may just switch them off
+          </p>
+        </div>
+      </article>
+      <article>
+        <img src="" alt="" />
+        <div>
+          <h2>All new features from Windows & Linux</h2>
+          <p>
+            Have you got a file system with real-time compression or built-in
+            vitual machene? BIQ-Cat OS have both of them! We've included the
+            best features from Windows (like WSA) and Linux (like Flatpak,
+            BTRFS)
+          </p>
+        </div>
+      </article>
+      <article>
+        <img src="" alt="" />
+        <div>
+          <h2>Applications compatibility</h2>
+          <p>
+            All you Android, IOS and Windows applications will work natively on
+            BIQ-Cat OS! Now you can play your favourite computure games on PC
+            without any emulators!
+          </p>
+        </div>
+      </article>
+    </section>
+    <footer></footer>
+  </body>
 </html>
