Finished index page

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -14,14 +14,15 @@
     <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
-    <!-- <script src="/js/index.js"></script> -->
+    <!-- <script src="/js/dist/index.js"></script> -->
     <div class="banner">
       <h1>BIQ-Cat OS - the OS of the future</h1>
       <button class="download">Download now</button>
     </div>
+    <h1>Featurs</h1>
     <section class="features">
       <article>
-        <img src="" alt="AI" />
+        <img src="/img/ai.png" alt="AI" />
         <div>
           <h2>AI</h2>
           <p>
@@ -31,7 +32,7 @@
         </div>
       </article>
       <article>
-        <img src="" alt="" />
+        <img src="/img/settings.png" alt="Features" />
         <div>
           <h2>All new features from Windows & Linux</h2>
           <p>
@@ -43,7 +44,7 @@
         </div>
       </article>
       <article>
-        <img src="" alt="" />
+        <img src="/img/productivity.png" alt="Productivity" />
         <div>
           <h2>Applications compatibility</h2>
           <p>
@@ -54,6 +55,8 @@
         </div>
       </article>
     </section>
-    <footer></footer>
+    <footer>&copy;2023. All rights reserved.</footer>
+    <script src="/js/jquery.min.js"></script>
+    <!-- <script src="/js/dist/animation.js"></script> -->
   </body>
 </html>
